k8s/apps/test-app-1/nginx3.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx3
  namespace: default
spec:
  selector:
    app: nginx3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
      - name: nginx3
        image: nginx:alpine
        ports:
        - containerPort: 80
